fix message about too much selected toys

--- a/css/header.css
+++ b/css/header.css
@@ -79,3 +79,27 @@
 .header__setting:hover {
     opacity: 0.5;
 }
+
+.error-message {
+    display: none;
+    width: 500px;
+    height: 50px;
+    border: 3px solid red;
+    border-radius: 20px;
+    background-color: rgb(255, 255, 255);
+    opacity: 0.8;
+}
+
+.error-message.active {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    top: 10px;
+    left: 50%;
+}
+
+.error-message__text {
+    font-size: 30px;
+    color: #ff0000;
+}
